<resources>
    <string name="app_name">CreateUserApp</string>
    <string name="labelUserID">Enter your ID:</string>
    <string name="inputPassword" />
    <string name="inputUserID" />
    <string name="labelPassword">Enter your Password:</string>
    <string name="buttonSubmit">Submit!</string>
    <string name="inputPasswordReenter">Confirm your Password:</string>
    <string name="back_to_login">back to Login</string>
    <string name="Login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="wrongLogin">Wrong ID or password</string>
    <string name="hello">Hello</string>
    <string name="enjoy_your_stay">Enjoy your stay!</string>
    <string name="logout">Logout</string>
</resources>
